share/test/regression/type_check/pass/instantiation_2.v
// Named port connections

module foo(x,y);
  input wire x;
  output wire y;
endmodule

wire x;
wire y;
foo f(.y(y), .x(x));

initial $finish;
