share/test/regression/type_check/fail/issue_60g.v
wire x;
initial begin
  $write("Too many args %d", x, x, x);
  $finish;
end
